--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title= "Library of Congress Callnumber parser test}"
+    %title Library of Congress Callnumber parser test
     %link{:href=>"http://fonts.googleapis.com/css?family=Arbutus", :rel=>"stylesheet", :type=>"text/css"}
     %script{:type => "text/javascript",
             :src  =>"//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"}
@@ -50,7 +50,4 @@
 
   %body
     %h1 Library of Contress Callnumber parser test
-    %div
-      Database URL
-      = ENV['DATABASE_URL']
     = yield      
