Put in basic help text

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,8 @@
 %div
-  Enter up to ten call numbers below (one per line) and then see how they parse.
+  %p Help test my new PEG-parser driven attempt to parse LC Call Numbers!
+  %p Enter up to ten call numbers below (one per line) and then see how they parse.
+  %p Verify (or correct) the output and then submit to help build a database of test cases!
+  %p GIVE ME YOUR WORST!
   
 %form{:action=>"/", :method=>"POST"}
   %textarea{:rows=>10, :name=>"lccs"}
