--- a/views/results.haml
+++ b/views/results.haml
@@ -1,4 +1,5 @@
 %h2 Results
+%p Note: "extra" cutters (beyond the first) are entered in a single field, delimited by the pipe ('|') character.
 
 - parsed.each_pair do |str,obj|
   %div.result
