More instrucgional text

--- a/views/results.haml
+++ b/views/results.haml
@@ -1,4 +1,11 @@
 %h2 Results
+
+%p 
+  If you have a few minutes, please take the time to check/correct and then submit the correct parse. I'm throwing them all in a database and will use it drive more testing for the underlying parser (in the gem 
+  %a{:href=>"https://github.com/billdueber/lc_callnumber"}lc_callnumber
+  ).
+  
+
 %p Note: "extra" cutters (beyond the first) are entered in a single field, delimited by the pipe ('|') character.
 
 - parsed.each_pair do |str,obj|
