--- a/views/layout.haml
+++ b/views/layout.haml
@@ -50,6 +50,11 @@
       })
 
   %body
-    %h1 Library of Contress Callnumber parser test
-    %div For questions, contact Bill Dueber (bill at dueber dot com)
+    %h1 
+      %a{:href=>'/'} Library of Contress Callnumber parser test
+    %div 
+      A test application for the parser embedded in the gem
+      %a{:href=>"https://github.com/billdueber/lc_callnumber"}lc_callnumber
+      .
+    %div For questions or comments, contact Bill Dueber (bill at dueber dot com)
     = yield      
