--- a/views/layout.haml
+++ b/views/layout.haml
@@ -52,9 +52,9 @@
   %body
     %h1 
       %a{:href=>'/'} Library of Contress Callnumber parser test
-    %div 
+    %p 
       A test application for the parser embedded in the gem
       %a{:href=>"https://github.com/billdueber/lc_callnumber"} lc_callnumber
       = "."
-    %div For questions or comments, contact Bill Dueber (bill at dueber dot com)
+    %p For questions or comments, contact Bill Dueber (bill at dueber dot com)
     = yield      
