Wider input box

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,5 +5,5 @@
   %p GIVE ME YOUR WORST!
   
 %form{:action=>"/", :method=>"POST"}
-  %textarea{:rows=>10, :name=>"lccs"}
+  %textarea{:rows=>10, :cols=>60, :name=>"lccs"}
   %input{:type=>"submit"}
