--- a/views/layout.haml
+++ b/views/layout.haml
@@ -82,7 +82,7 @@
   %body
     %div#header
       %h1 
-        %a{:href=>'/'} Library of Contress Callnumber parser test
+        %a{:href=>'/'} Library of Congress Callnumber parser test
       %p 
         A test application for the parser embedded in the gem
         %a{:href=>"https://github.com/billdueber/lc_callnumber"} lc_callnumber
